Fix navbar sizing issue where pull-right would be hidden on overflow

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -215,3 +215,10 @@ input[type="file"]{
   font-size: 0;
   display: block;
 }
+
+
+@media (max-width: 940px) {
+  .navbar-fixed-top .container {
+    width: auto !important;
+  }
+}
